--- a/Dialog1.resx
+++ b/Dialog1.resx
@@ -132,4 +132,7 @@ It helps those who use scripts easily download, update and remove scripts.
 It's built for scripters, by scripters.
 Bget was conceived in 2016, but this reincarnation of Bget was made in 2018.</value>
   </data>
+  <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
